Copy's en precios
Actualización de los Copy's en español.

--- a/es/precios.html
+++ b/es/precios.html
@@ -206,8 +206,8 @@
                           <img src="../images/gsuite.png" alt="Integración con Google">
                         </figure>
                         <div class="prod_feature_box_text">
-                          <h4>Integración con Google</h4>
-                          <p> & toda su suite</p>
+                          <h4>G Suite</h4>
+                          <p>Archivos, Calendario y más</p>
                         </div>
                       </div>
                     </li>
@@ -220,11 +220,11 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Diagrama de Gantt</h4>
-                        <p>Visual & Automatico</p>
+                        <p>Visual y Automático</p>
                       </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="../images/templates.png" alt="Inclusión de templates">
@@ -234,7 +234,7 @@
                         <p> Para cada tipo de equipo</p>
                       </div>
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <span class="plan_tag">Growth</span>
@@ -243,7 +243,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                          <h4>Time Tracker</h4>
-                        <p>Para sus tareas</p>
+                        <p>Estima las tareas</p>
                       </div>
                       </div>
                     </li>
@@ -255,7 +255,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Expense Traker</h4>
-                        <p> Para controlar el dinero</p>
+                        <p>Monitoreo del gastos</p>
                       </div>
                       </div>
                     </li>
@@ -269,12 +269,12 @@
                           <img src="../images/multipleteams.png" alt="Multiples equipos">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Multiples Equipos</h4>
-                        <p>Para colaborar con otros</p>
+                        <h4>Múltiples Equipos</h4>
+                        <p>Trabajo colaborativo y estructurado</p>
                         </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                          <span class="plan_tag">Growth</span>
                         <figure>
@@ -286,7 +286,7 @@
                       </div>
 
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -294,7 +294,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
-                        <p>fáciles de administrar</p>
+                        <p>Control de permisos</p>
                       </div>
 
                       </div>
@@ -307,7 +307,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Marketplace</h4>
-                        <p>Para activar funcionalidades</p>
+                        <p>Ad-on integrados</p>
                       </div>
 
                       </div>
@@ -319,7 +319,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Soporte</h4>
-                        <p>En tiempo real</p>
+                        <p>Información y asistencia </p>
                       </div>
                       </div>
                     </li>
@@ -394,12 +394,12 @@
                           <img src="../images/gsuite.png" alt="G suite integration">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Integración con Google</h4>
-                        <p>& toda su suite</p>
+                        <h4>G Suite</h4>
+                        <p>Archivos, Calendario y más</p>
                       </div>
                       </div>
                     </li>
-                       <li>
+                       <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="../images/templates.png" alt="project templates">
@@ -409,15 +409,15 @@
                         <p> Para cada tipo de equipo</p>
                       </div>
                       </div>
-                    </li>
+                    </li>-->
                       <li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="../images/multipleteams.png" alt="multiple teams">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Multiple Teams</h4>
-                        <p>Para colaborar con otros</p>    
+                        <h4>Múltiples Equipos</h4>
+                        <p>Trabajo colaborativo y estructurado</p>    
                       </div>
                       </div>
                     </li>
@@ -428,7 +428,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
-                        <p>fáciles de administrar</p>  
+                        <p>Control de permisos</p>  
                       </div>
 
                       </div>
@@ -440,7 +440,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Soporte</h4>
-                        <p>En tiempo real</p>
+                        <p>Información y asistencia</p>
                       </div>
                       </div>
                     </li>
@@ -516,8 +516,8 @@
                           <img src="../images/gsuite.png" alt="G suite integration">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Integración con Google</h4>
-                        <p>& toda su suite</p>
+                        <h4>G Suite</h4>
+                        <p>Archivos, Calendario y más</p>
                       </div>
                       </div>
                     </li>
@@ -528,11 +528,11 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Diagrama de Gantt</h4>
-                        <p>Visual & Automatico</p>
+                        <p>Visual y Automático</p>
                       </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="../images/templates.png" alt="Project templates">
@@ -542,7 +542,7 @@
                         <p> Para cada tipo de equipo</p>
                       </div>
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -550,7 +550,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Time Tracker</h4>
-                        <p>Para sus tareas</p>
+                        <p>Estima las tareas</p>
                       </div>
                       </div>
                     </li>
@@ -561,7 +561,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Expense traker</h4>
-                        <p> Para controlar el dinero</p>
+                        <p>Monitoreo del gastos</p>
                       </div>
                       </div>
                     </li>
@@ -575,12 +575,12 @@
                           <img src="../images/multipleteams.png" alt="multiple teams">
                         </figure>
                         <div class="prod_feature_box_text">
-                        <h4>Multiple Teams</h4>
-                        <p>Para colaborar con otros</p>   
+                        <h4>Múltiples Equipos</h4>
+                        <p>Trabajo colaborativo y estructurado</p>   
                       </div>
                       </div>
                     </li>
-                    <li>
+                    <!--<li>
                       <div class="prod_feature_box">
                         <figure>
                           <img src="../images/cost.png" alt="Coast management">
@@ -589,9 +589,8 @@
                         <h4>Cost Management</h4>
                         <p>Control on the money</p>   
                       </div>
-
                       </div>
-                    </li>
+                    </li>-->
                     <li>
                       <div class="prod_feature_box">
                         <figure>
@@ -599,9 +598,8 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Roles</h4>
-                        <p>fáciles de administrar</p>    
+                        <p>Control de permisos</p>    
                       </div>
-
                       </div>
                     </li>
                     <li>
@@ -611,7 +609,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Marketplace</h4>
-                        <p>Para activar funcionalidades</p>  
+                        <p>Ad-on integrados</p>  
                       </div>
                       </div>
                     </li>
@@ -622,7 +620,7 @@
                         </figure>
                         <div class="prod_feature_box_text">
                         <h4>Soporte</h4>
-                        <p>En tiempo real</p>
+                        <p>Información y asistencia</p>
                       </div>
                       </div>
                     </li>        
