--- a/es/es.html
+++ b/es/es.html
@@ -23,8 +23,7 @@
     <!-- End Google Tag Manager -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="La experiencia de gestión de proyectos más rápida para la colaboración entre empresas. Integración con G Suite, diagramas de Gantt, registro de tiempo, presupuesto y más.">
-    <meta name="keywords" content="Google Apps, G Suite, proyectos, administración, tareas, colaboración, integración, automatización, registro de tiempo, diagramas de Gantt, presupuesto, rastreador, archivos, Google Drive, Calendario,">
+    <meta name="description" content="La mejor experiencia de gestión de proyectos más rápida para la colaboración entre empresas completamente Integrada con G-Suite.">
     <link rel="author" href="https://workep.com" />
     <!-- FB Meta tags -->
     <meta property="og:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos"/>
