--- a/terms.html
+++ b/terms.html
@@ -23,7 +23,6 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="description" content="Workep have prepared a couple clauses to protect you and to protect us. We tried to keep it simple. This agreement is effective: May 25, 2018. take a look.">
-  <meta name="keywords" content="Google Apps, G Suite, projects, management, tasks, collaboration, integrate, automate, Time Tracker, Gantt Chart, Budget, Tracker, files, Google Drive, Calendar,">
   <link rel="author" href="https://workep.com" />
   <!-- FB Meta tags -->
   <meta property="og:title" content="Workep: Rebuilding the project management experience"/>
@@ -71,7 +70,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
-             <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
+             <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
              <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
@@ -369,9 +368,9 @@ If a Non-Workep Product is enabled for Customer’s team, please be mindful of a
             <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
             <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-            <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+            <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
             <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-            <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+            <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
