--- a/competitors-notion.html
+++ b/competitors-notion.html
@@ -7,6 +7,7 @@
      <title>Workep because it's better than Airtable discover it here!</title>
     <meta name="description" content="Find out why Workep surpasses Notion's functionality with fully integrated software with G-Suite, powerful in-app functions, and one-click external collaboration.">    
 <!-- Page icon -->
+    <link rel="canonical" href="https://workep.com/competitors-notion.html">    
     <link rel="shortcut icon" href="https://res.cloudinary.com/cegalvarez/image/upload/c_scale,w_48/v1479745739/logo_qvnjq5.ico" type="image/x-icon">
       
 <!-- Bootstrap CSS -->
@@ -676,9 +677,9 @@
               <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+              <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
               <h4>Features</h4>
             <ul class="links_all">
