--- a/competitors-wrike.html
+++ b/competitors-wrike.html
@@ -667,9 +667,9 @@
               <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+              <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+              <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
               <h4>Features</h4>
             <ul class="links_all">
