--- a/gmail-add-on.html
+++ b/gmail-add-on.html
@@ -173,7 +173,7 @@
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
               <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
               <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+              <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
             </ul>
               <h4>Features</h4>
             <ul class="links_all">
