--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/product.html">PRODUCT</a></li>
-             <li><a href="https://workep.com/madeforgoogle.html">GOOGLE PROJECT MANAGEMENT</a></li>
+             <li><a href="https://workep.com/made-for-google.html">GOOGLE PROJECT MANAGEMENT</a></li>
              <!-- <li><a href="https://workep.com/stories.html">USE CASES</a></li> -->
              <li><a href="https://workep.com/pricing.html">PRICING</a></li>
              <li><a href="https://workep.com/partners.html" target="_blank">PARTNERS</a></li>
