--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -425,9 +425,9 @@ If you join a Team workspace and create a user account, you are a “user,” as
             <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
             <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-            <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
+            <li><a href="https://workep.com/made-for-google.html">Made for Google</a></li>
             <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-            <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+            <li><a href="https://workep.com/download-apps.html">Download Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
