--- a/es/competidor-asana.html
+++ b/es/competidor-asana.html
@@ -659,9 +659,9 @@
               <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
-              <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+              <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
-              <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
+              <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
               <h4>Características</h4>
             <ul class="links_all">
