--- a/es/descargar-apps.html
+++ b/es/descargar-apps.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title> Descarga La App de Workep en la Apps store o Play store</title>
     <meta name="description" content="Puedes descargar ya nuestra app desde la app store y la play store y empezar adisfrutar de la mejor experiencia de gestión de proyectos completamente integrada."/>  
-    <link rel="canonical" href="https://workep.com/es/descargarapps.html"/>
+    <link rel="canonical" href="https://workep.com/es/descargar-apps.html"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 
@@ -156,9 +156,9 @@
             <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
             <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
             <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
-            <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+            <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
             <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
-            <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
+            <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
           </ul>
         </div>
         <div class="foot3">
@@ -202,7 +202,7 @@
          <div class="footlanguage_select">
             <select onchange="if (this.value) window.location.href=this.value">
               <option value="https://workep.com/downloadapps.html" selected>English</option>
-              <option value="https://workep.com/es/descargarapps.html">Español</option>
+              <option value="https://workep.com/es/descargar-apps.html">Español</option>
             </select>
          </div>
         </div>
