--- a/es/notas-de-voz.html
+++ b/es/notas-de-voz.html
@@ -22,10 +22,6 @@
     <link rel="stylesheet" href="../css/style.competitors.css">
   </head>
 <body>
-    
-
-
-
 <header class="main_head no-bg">
       <div class="container">
         <nav class="navbar navbar-expand-lg">
@@ -171,82 +167,81 @@
             <span class="madeby">Made with <i><img src="../images/heart_im.png" alt="workep made with love"></i> by Workep</span>
           </div>
           <div class="foot2">
-            <h4>Product</h4>
+           <h4>Producto</h4>
             <ul class="links_all">
-              <li><a href="https://workep.com/product.html">Features</a></li>
+              <li><a href="https://workep.com/es/producto.html">Características</a></li>
               <!-- <li><a href="#url">Integrations </a></li> -->
               <!-- <li><a href="#url">Users guide </a></li> -->
-              <!-- <li><a href="https://workep.com/stories.html">Use cases </a></li> -->
-              <li><a href="https://projectmanagement.workep.com/request-demo">Request a demo </a></li>
-              <li><a href="https://projectmanagement.workep.com/contact-sales">Contact Sales</a></li>
-              <li><a href="https://workep.com/madeforgoogle.html">Made for Google</a></li>
-              <li><a href="https://workep.com/workep-for-education.html">For Education</a></li>
-              <li><a href="https://workep.com/downloadapps.html">Download Apps</a></li>
+              <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
+              <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
+              <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
+              <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
+              <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
+              <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
-              <h4>Features</h4>
+              <h4>Características</h4>
             <ul class="links_all">
-                <li><a href="https://workep.com/time-tracker.html">Time traker</a></li>
-                <li><a href="https://workep.com//budget-tracker.html">Budget Traker</a></li>
-                <li><a href="https://workep.com/external-collaboration.html">External Collaboration</a></li>
-                <li><a href="https://workep.com/gantt-chart.html">Gantt Chart</a></li>
-                <li><a href="https://workep.com/gmail-add-on.html">Gmail Ad-on</a></li>
+                <li><a href="https://workep.com/es/time-tracker.html">Time traker</a></li>
+                <li><a href="https://workep.com/es/budget-tracker.html">Budget Traker</a></li>
+                <li><a href="https://workep.com/es/colaboracion-externa.html">External Collaboration</a></li>
+                <li><a href="https://workep.com/es/diagrama-de-gantt.html">Diagrama de Gantt</a></li>
+                <li><a href="https://workep.com/es/plugin-gmail.html">Gmail Ad-on</a></li>
             </ul>
           </div>
           <div class="foot3">
-            <h4>Workep</h4>
+           <h4>Workep</h4>
             <ul class="links_all">
-              <li><a href="https://workep.com/pricing.html">Pricing</a></li>
-              <li><a href="https://angel.co/workep/jobs">Careers</a></li>
-              <li><a href="https://workep.com/partners.html">Partners</a></li>
+              <li><a href="https://workep.com/es/precios.html">Precios</a></li>
+              <li><a href="https://angel.co/workep/jobs">Trabaja con nosotros</a></li>
+              <li><a href="https://workep.com/es/socios.html">Socios</a></li>
               <!--<li><a href="#url">Press Kit</a></li>-->
             </ul>
-            <h4>Competitors</h4>
+            <h4>Competidores</h4>
             <ul class="links_all">
-                <li><a href="https://workep.com/competitors-airtable.html">Airtable</a></li>
-                <li><a href="https://workep.com/competitors-asana.html">Asana</a></li>
-                <li><a href="https://workep.com/competitors-basecamp.html">Basecamp</a></li>
-                <li><a href="https://workep.com/competitors-jira.html">Jira</a></li>
-                <li><a href="https://workep.com/competitors-monday.html">Monday</a></li>
-                <li><a href="https://workep.com/competitors-notion.html">Notion</a></li>
-                <li><a href="https://workep.com/competitors-smartsheet.html">Smartsheet</a></li>
-                <li><a href="https://workep.com/competitors-trello.html">Trello</a></li>
-                <li><a href="https://workep.com/competitors-wrike.html">Wrike</a></li>
+                <li><a href="https://workep.com/es/competidor-airtable.html">Airtable</a></li>
+                <li><a href="https://workep.com/es/competidor-asana.html">Asana</a></li>
+                <li><a href="https://workep.com/es/competidor-basecamp.html">Basecamp</a></li>
+                <li><a href="https://workep.com/es/competidor-jira.html">Jira</a></li>
+                <li><a href="https://workep.com/es/competidor-monday.html">Monday</a></li>
+                <li><a href="https://workep.com/es/competidor-notion.html">Notion</a></li>
+                <li><a href="https://workep.com/es/competidor-smartsheet.html">Smartsheet</a></li>
+                <li><a href="https://workep.com/es/competidor-trello.html">Trello</a></li>
+                <li><a href="https://workep.com/es/competidor-wrike.html">Wrike</a></li>
             </ul>  
           </div>
           <div class="foot4">
-            <h4>Resources</h4>
+            <h4>Recursos</h4>
             <ul class="links_all">
-              <li><a href="https://blog.workep.com/">Blog</a></li>
+              <li><a href="https://blog.workep.com/es/">Blog</a></li>
               <!-- <li><a href="#url">Ebooks </a></li> -->
               <li><a href="https://www.youtube.com/channel/UCt3GbHNB2il6tiXxoXtukUQ">Videos</a></li>
-              <li><a href="https://help.workep.com/">Help Center</a></li>
-              <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Complete PM guide</a></li>
+              <li><a href="https://help.workep.com/">Centro de ayuda</a></li>
+              <li><a href="https://projectmanagement.workep.com/everything-you-need-to-know-about-project-management">Guía gestión de proyectos</a></li>
             </ul>
-            <h4>Legal</h4>
+           <h4>Legal</h4>
             <ul class="links_all">
-              <li><a href="https://workep.com/privacy-policy.html">Privacy</a></li>
-              <li><a href="https://workep.com/terms.html">Terms of Service</a></li>
+              <li><a href="https://workep.com/privacy-policy.html">Política de privacidad</a></li>
+              <li><a href="https://workep.com/terms.html">Términos del servicio</a></li>
             </ul>
-              <h4>Industry</h4>
+              <h4>Industrias</h4>
             <ul class="links_all">
-                <li><a href="https://workep.com/startups.html">Startup</a></li>
-                <li><a href="https://workep.com/law-firms.html">Law Firms</a></li>
-                <li><a href="https://workep.com/software-dev.html">Developer Dev</a></li>
-                <li><a href="https://workep.com/consulting.html">Consulting</a></li>
-                <li><a href="https://workep.com/marketing.html">Marketing</a></li>
+                <li><a href="https://workep.com/es/startups.html">Startup</a></li>
+                <li><a href="https://workep.com/es/firmas-de-abogados.html">Firmas de abogados</a></li>
+                <li><a href="https://workep.com/es/desarrollo-de-software.html">Compañías de software</a></li>
+                <li><a href="https://workep.com/es/consultoria.html">Servicios profesionales</a></li>
+                <li><a href="https://workep.com/es/marketing.html">Marketing y creatividad</a></li>
             </ul>
+          </div>
           </div>
           <div class="foot5">
-            <h4>Contact</h4>
+            <h4>Contacto</h4>
             <ul class="soc_link">
-               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="hastag"></a></li>
-               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="E-mail"></a></li>
+               <li><a href="https://twitter.com/workep" target="_blank"><img src="../images/con_ic2.png" alt="Icono correo"></a></li>
+               <li><a href="mailto:service@workep.com?Subject=Hello%20Workep%20Team!"><img src="../images/con_ic3.png" alt="Icono e-mail"></a></li>
             </ul>
           </div>
-       
         </div>
       </div>
-    </div>
     <div class="foot_bot">
       <div class="container">
         <div class="foot_bot_row">
@@ -278,10 +273,6 @@
       </div>
     </div>
   </footer>
-
-
-
-
   	<!-- Jquery-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="../js/bootstrap.js"></script>
