--- a/es/hecho-para-google.html
+++ b/es/hecho-para-google.html
@@ -9,7 +9,7 @@
     <!-- Google indicator for language  -->
     <link rel=“alternate” hreflang=“en” href=“https://workep.com/” />
     <link rel=“alternate” hreflang=“es” href=“https://workep.com/es/es.html” />
-    <link rel="canonical" url="https://workep.com/es/hechoparagoogle.html">
+    <link rel="canonical" url="https://workep.com/es/hecho-para-google.html">
 
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
@@ -75,7 +75,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
-             <li><a href="https://workep.com/es/hechoparagoogle.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
+             <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
              <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
              <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
@@ -513,9 +513,9 @@
                 <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
                 <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
                 <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
-                <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+                <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
                 <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
-                <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
+                <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
               </ul>
             </div>
             <div class="foot3">
@@ -559,7 +559,7 @@
              <div class="footlanguage_select">
                 <select onchange="if (this.value) window.location.href=this.value">
                   <option value="https://workep.com/madeforgoogle.html" selected>English</option>
-                  <option value="https://workep.com/es/hechoparagoogle.html">Español</option>
+                  <option value="https://workep.com/es/hecho-para-google.html">Español</option>
                 </select>
              </div>
             </div>
