--- a/es/socios.html
+++ b/es/socios.html
@@ -24,8 +24,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="La experiencia de gestión de proyectos más rápida para la colaboración entre empresas. Integración con G Suite, diagramas de Gantt, registro de tiempo, presupuesto y más.">
-    <meta name="keywords" content="Google Apps, G Suite, proyectos, administración, tareas, colaboración, integración, automatización, registro de tiempo, diagramas de Gantt, presupuesto, rastreador, archivos, Google Drive, Calendario,">
-    <link rel="author" href="https://workep.com" />
+    
+      <link rel="author" href="https://workep.com" />
     <!-- FB Meta tags -->
     <meta property="og:title" content="Workep: reconstruyendo la experiencia de gestión de proyectos"/>
     <meta property="og:type" content="website"/>
@@ -75,7 +75,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
             <li><a href="https://workep.com/es/producto.html">PRODUCTO</a></li>
-             <li><a href="https://workep.com/es/hechoparagoogle.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
+             <li><a href="https://workep.com/es/hecho-para-google.html">GESTIÓN DE PROYECTOS GOOGLE</a></li>
              <!-- <li><a href="https://workep.com/es/casosdeuso.html">CASOS DE USO</a></li> -->
              <li><a href="https://workep.com/es/precios.html">PRECIOS</a></li>
              <li><a href="https://workep.com/es/socios.html" target="_blank">SOCIOS</a></li>
@@ -369,9 +369,9 @@
               <!-- <li><a href="https://workep.com/es/casosdeuso.html">Casos de uso </a></li> -->
               <li><a href="https://projectmanagement.workep.com/request-demo">Solicitar un demo </a></li>
               <li><a href="https://projectmanagement.workep.com/contact-sales">Contactar a ventas</a></li>
-              <li><a href="https://workep.com/es/hechoparagoogle.html">Hecho para Google</a></li>
+              <li><a href="https://workep.com/es/hecho-para-google.html">Hecho para Google</a></li>
               <li><a href="https://workep.com/es/workep-para-educacion.html">Workep Para Educación</a></li>
-              <li><a href="https://workep.com/es/descargarapps.html">Descargar Apps</a></li>
+              <li><a href="https://workep.com/es/descargar-apps.html">Descargar Apps</a></li>
             </ul>
           </div>
           <div class="foot3">
